# libusbserial

./: .gitignore  CMakeLists.txt  README.md  common.c  common.h  config.h  core.c  driver.h  driver_cdc.c  driver_ftdi.c  driver_silabs.c  drivers.h  error.c  internal.h  libusbserial.h
