project(usbserial C)
cmake_minimum_required(VERSION 2.8)
find_package(PkgConfig)
file(GLOB SRC_LIST *.c *.h)
pkg_check_modules(LIBUSB REQUIRED libusb-1.0)
add_library(${PROJECT_NAME} ${SRC_LIST})
include_directories(${LIBUSB_INCLUDE_DIRS})
link_directories(${LIBUSB_LIBRARY_DIRS})
target_link_libraries(${PROJECT_NAME} ${LIBUSB_LIBRARIES})
